--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.triplec.paul.phinda.skhumbuzo.mulisa.witssrcconnect"
+        applicationId "com.wits.witssrcconnect"
         minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
