--- a/.travis.yml
+++ b/.travis.yml
@@ -1,65 +1,66 @@
 language: android
-# use Java 8
 jdk: oraclejdk8
-
-# see https://blog.travis-ci.com/2014-12-17-faster-builds-with-container-based-infrastructure
 sudo: false
 
+notifications:
+  email:
+  - 1627982@students.wits.ac.za
+
 env:
+  matrix:
+  - ANDROID_TARGET=android-19 ANDROID_ABI=armeabi-v7a
+  - ANDROID_TARGET=android-21 ANDROID_ABI=armeabi-v7a
   global:
-    - ANDROID_API_LEVEL = 28
-    - ANDROID_EMULATOR_LEVEL = 19
-    - ANDROID_BUILD_TOOLS_VERSION = 29.0.0 rc1
-    - ADB_INSTALL_TIMEOUT = 20
-    - ANDROID_ABI = armeabi-v7a
-    - ANDROID_TAG = google_apis
-    - QEMU_AUDIO_DRV = none
+  - ADB_INSTALL_TIMEOUT=10    #Time out to 10 mins
+
+before_cache:
+- rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+
+cache:
+  directories:      #Cache all dirs under .gradle folder
+  - $HOME/.gradle/daemon      #Cache daemon logs
+  - $HOME/.gradle/native      #Cache library downloaded from the gradle dependency
+  - $HOME/.gradle/wrapper     #Cache the gradle
 
 android:
   components:
-    - tools
-    - platform-tools
-    - tools
-    - build-tools-$ANDROID_BUID_TOOLS_VERSION
-    - android-$ANDROID_API_LEVEL
-    - android-$ANDROID_EMULATOR_LEVEL
-    - extra-android-support
-    - extra-google-m2repository
-    - extra-android-m2repository
-    - sys-img-$ANDROID_ABI-google_apis-$ANDROID_EMULATOR_LEVEL
+  - platform-tools
+  - tools
+  - build-tools-25.0.0
+  - android-25
 
-license:
-  - android-sdk-preview-liense-.+
-  - android-sdk-license-.+
-  - google-gdk-license-.+
+  # Additional components
+  - extra-google-google_play_services
+  - extra-google-m2repository
+  - extra-android-m2repository
 
-  # cache the build tool's caches
-cache:
-  directories:
-  - "$HOME/.gradle/caches/"
-  - "$HOME/.gradle/wrapper/"
-  - "$HOME/.android/build-cache"
+  #system images
+  - sys-img-armeabi-v7a-android-19
+  - sys-img-armeabi-v7a-android-21
 
-before_install:
-  - yes | sdkmanager "cmake;3.10.2.4988404"
-  - wget https://dl.google.com/android/repository/android-ndk-r18b-linux-x86_64.zip
-  - unzip android-ndk-r18b-linux-x86_64.zip -d $HOME > /dev/null
-  - export ANDROID_NDK_HOME=$HOME/android-ndk-r18b
-  - export PATH=$PATH:$ANDROID_NDK_HOME
-  - mkdir "$ANDROID_HOME/licenses" || true
-  - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
-  - echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
+licenses:
+- 'android-sdk-preview-license-52d11cd2'
+- 'android-sdk-license-.+'
+- 'google-gdk-license-.+'
+
+before_script:
+- chmod +x gradlew      #Grand permissions
+- android list targets
+- echo no | android create avd --force --name test --target $ANDROID_TARGET --abi $ANDROID_ABI    #Create AVD for given api
+- emulator -avd test -no-skin -no-audio -no-window &    #Start emulator
 
 script:
-  - android list targets
-  - echo no | android create avd --force -n test -t "android-"$ANDROID_EMULATOR_LEVEL --abi $ANDROID_ABI --tag $ANDROID_TAG
-  - emulator -avd test -no-window &
-  - mkdir -p build/reports
-  #  - ./gradlew dependencyCheckAnalyze
-  - ./gradlew assembleDebugAndroidTest -PdisablePreDex --continue --stacktrace
-  - android-wait-for-emulator
-  #  - adb shell input keyevent 82 &
-  - ./gradlew connectedDebugAndroidTest -PdisablePreDex --continue --stacktrace
+- echo "Travis branch is $TRAVIS_BRANCH"
+- echo "Travis branch is in pull request $TRAVIS_PULL+REQUEST"
+- android-wait-for-emulator
+- adb devices   #Display list of devices
+- adb shell input keyevent 82 &
+- ./gradlew connectedCheck -PdisablePreDex --stacktrace
 
-after_failure:
-  - cat $TRAVIS_BUILD_DIR/app/build/reports/lint-results.xml
+before_install:
+- pip install --user codecov    #Install codecov
+
+after_success:
+- codecov                       #Run codecov
+
+after_failure: "cat $TRAVIS_BUILD_DIR/app/build/outputs/lint-results-debug.xml"
