attempt at travisCI again

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,67 @@
 language: android
 jdk: oraclejdk8
+sudo: false
+
+notifications:
+  email:
+  - 1627982@students.wits.ac.za
+
 env:
+  matrix:
+  - ANDROID_TARGET=android-19 ANDROID_ABI=armeabi-v7a
+  - ANDROID_TARGET=android-21 ANDROID_ABI=armeabi-v7a
   global:
-  - ANDROID_TARGET=android-22
-  - ANDROID_ABI=armeabi-v7a
+  - ADB_INSTALL_TIMEOUT=10    #Time out to 10 mins
+
+before_cache:
+- rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+
+cache:
+  directories:      #Cache all dirs under .gradle folder
+  - $HOME/.gradle/daemon      #Cache daemon logs
+  - $HOME/.gradle/native      #Cache library downloaded from the gradle dependency
+  - $HOME/.gradle/wrapper     #Cache the gradle
+
 android:
   components:
-  - tools
   - platform-tools
-  - build-tools-23.0.3
-  - android-23
+  - tools
+  - build-tools-25.0.0
+  - android-25
+
+  # Additional components
+  - extra-google-google_play_services
+  - extra-google-m2repository
   - extra-android-m2repository
-  - $ANDROID_TARGET
-  - sys-img-${ANDROID_ABI}-${ANDROID_TARGET}
-script:
-- ./gradlew build jacocoTestReport assembleAndroidTest
+
+  #system images
+  - sys-img-armeabi-v7a-android-19
+  - sys-img-armeabi-v7a-android-21
+
+licenses:
+- 'android-sdk-preview-license-52d11cd2'
+- 'android-sdk-license-.+'
+- 'google-gdk-license-.+'
+
+before_script:
+- chmod +x gradlew      #Grand permissions
+- android list targets
 - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
-- emulator -avd test -no-skin -no-audio -no-window &
+# - echo no | android create avd --force --name test --target $ANDROID_TARGET --abi $ANDROID_ABI    #Create AVD for given api
+- emulator -avd test -no-skin -no-audio -no-window &    #Start emulator
+
+script:
+- echo "Travis branch is $TRAVIS_BRANCH"
+- echo "Travis branch is in pull request $TRAVIS_PULL+REQUEST"
 - android-wait-for-emulator
-- adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
-- ./gradlew connectedCheck
+- adb devices   #Display list of devices
+- adb shell input keyevent 82 &
+- ./gradlew connectedCheck -PdisablePreDex --stacktrace
+
+before_install:
+- pip install --user codecov    #Install codecov
+
 after_success:
-- bash <(curl -s https://codecov.io/bash)
+- codecov                       #Run codecov
+
+after_failure: "cat $TRAVIS_BUILD_DIR/app/build/outputs/lint-results-debug.xml"
