--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,9 @@ android:
   components:
   - platform-tools
   - tools
-  - build-tools-25.0.0
-  - android-25
+  - build-tools-24.0.1
+  - android-22
+  - sys-img-armeabi-v7a-android-22
 
   # Additional components
   - extra-google-google_play_services
@@ -44,11 +45,11 @@ licenses:
 - 'google-gdk-license-.+'
 
 before_script:
-- chmod +x gradlew      #Grand permissions
-- android list targets
-- echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
-# - echo no | android create avd --force --name test --target $ANDROID_TARGET --abi $ANDROID_ABI    #Create AVD for given api
-- emulator -avd test -no-skin -no-audio -no-window &    #Start emulator
+- "android update sdk --no-ui --filter build-tools-24.0.1,android-24,extra-android-m2repository"
+- "echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a"
+- "emulator -avd test -no-skin -no-audio -no-window &"
+- android-wait-for-emulator
+- "adb shell input keyevent 82 &"
 
 script:
 - echo "Travis branch is $TRAVIS_BRANCH"
