--- a/.travis.yml
+++ b/.travis.yml
@@ -16,13 +16,12 @@ android:
   - $ANDROID_TARGET
   - sys-img-${ANDROID_ABI}-${ANDROID_TARGET}
 licenses:
-- 'android-sdk-preview-license-52d11cd2'
 - 'android-sdk-license-.+'
-- 'google-gdk-license-.+'
+before_install:
+  - yes | sdkmanager "platforms;android-27"
 script:
 - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
 - emulator -avd test -no-skin -no-audio -no-window &
 - android-wait-for-emulator
 - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
-- ./gradlew build jacocoTestReport assembleAndroidTest
 - ./gradlew connectedCheck
