--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ script:
   - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
   - ./gradlew connectedCheck
   - ./gradlew build jacocoTestReport
+  - ./gradlew connectedAndroidTest coveralls
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
