--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
         classpath 'org.jacoco:org.jacoco.core:0.8.0'
+        classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.4.0'
         // NOTE: Do not place your application dependencies here; they belong.
         // in the individual module build.gradle files.
     }
