--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,11 @@ tasks.coveralls {
 
 android {
     compileSdkVersion 28
+
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
+
     defaultConfig {
         applicationId "com.wits.witssrcconnect"
         minSdkVersion 19
@@ -46,6 +51,7 @@ android {
 
         unitTests {
             includeAndroidResources = true
+            returnDefaultValues = true
         }
     }
 
@@ -83,8 +89,11 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.robolectric:robolectric:3.7.1'
+    testImplementation 'org.mockito:mockito-core:1.10.19'
     androidTestUtil 'com.android.support.test:orchestrator:1.0.2'
+    androidTestImplementation 'com.android.support:support-annotations:28.0.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    testCompile 'junit:junit:4.12'
+
 }
