--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,9 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.0'
-        classpath 'org.jacoco:org.jacoco.core:0.8.0'
+        classpath 'com.dicedmelon.gradle:jacoco-android:0.1.4'
+
+        //classpath 'org.jacoco:org.jacoco.core:0.8.0'
         // NOTE: Do not place your application dependencies here; they belong.
         // in the individual module build.gradle files.
     }
