--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'jacoco-android'
 //apply plugin: 'jacoco'
 
+
 //task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest', 'createDebugCoverageReport']) {
 //
 //    reports {
@@ -68,11 +69,12 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.robolectric:robolectric:3.7.1'
-    testImplementation 'org.mockito:mockito-core:1.10.19'
+    //testImplementation 'org.mockito:mockito-core:2.7.22'
     androidTestUtil 'com.android.support.test:orchestrator:1.0.2'
     androidTestImplementation 'com.android.support:support-annotations:28.0.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
+    androidTestImplementation 'org.mockito:mockito-android:2.13.0'
+    androidTestImplementation 'junit:junit:4.12'
 }
