--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         debug {
+            debuggable true
             testCoverageEnabled true
         }
     }
