testing new codecov approach

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ before_install:
   - yes | sdkmanager "platforms;android-27"
 
 script:
+  #- ./gradlew build jacocoTestReport
   - ./gradlew build jacocoTestReport
   - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
   - emulator -avd test -no-skin -no-audio -no-window &
