--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ before_install:
 
 script:
   #- ./gradlew build jacocoTestReport
-  - ./gradlew build jacocoTestReport
+  - ./gradlew build customJacocoTestReport
   - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
