--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,8 @@
         <activity android:name=".activities.ViewCommentsActivity"
             android:label="@string/view_comments"/>
 
+        <activity android:name=".activities.PollVoteActivity"
+            android:label="@string/src_polls"/>
     </application>
 
 </manifest>
