--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     androidTestImplementation 'org.mockito:mockito-android:2.13.0'
     androidTestImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.21buttons:fragment-test-rule:1.0.0'
 }
